Further misalignment fix

--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -740,7 +740,9 @@ body.layout-single-column {
 
 /* Improved UI for the new quote posts popper */
 div[data-popper-placement]:has(.reblog-button__item button:disabled) .dropdown-menu {
-  max-width: 180px;
+  width: 180px;
+  left: 80px;
+  position: relative;
 }
 
 div[data-popper-placement] .reblog-button__item button:disabled {
